--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@canvasjs/charts": "^3.8.0",
     "canvasjs": "^1.8.3",
+    "canvasjs-react-charts": "^1.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^10.0.5"
