--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@canvasjs/charts": "^3.8.0",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "canvasjs": "^1.8.3",
     "canvasjs-react-charts": "^1.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
