--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "canvasjs": "^1.8.3",
     "canvasjs-react-charts": "^1.0.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "openai": "^4.33.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
